# xebees

./: BO_ex.py  ERF2d.py  README.md  env.modules  environment-gh.yml  environment.yml  hamiltonian.py  pyproject.toml  pyscf_conf.py
1D/: constants.py  davidson.py  debug.py  fixed_center_of_mass_exact.py  fixed_center_of_mass_exact_1D.py  fixed_single_mass_exact.py  fixed_single_mass_exact_1D.py  hamiltonian.py  notebook-1D.ipynb  notebook.ipynb  ps.py
2D/: 2d_ps_multi.py  2d_ps_multi_cupy.py  2d_ps_multi_cupy_test.py  2d_ps_multi_sparse.py  erf_polar.bash  erf_polar_nersc.bash  etf_cart_nersc.bash  fast_cartesian_cpu_erf.py  fast_cartesian_cpu_etf.py  fast_polar_cpu_erf.py  fast_polar_cpu_etf.py  fixed_BO_test.ipynb  fixed_center_of_mass_exact.py  fixed_center_of_mass_exact_cupy.py  mapped_fourier_transform_ho-Copy_nadine.ipynb  mapped_fourier_transform_ho.ipynb  mem_cartesian_cpu_erf.py  mem_cartesian_cpu_etf.py  mem_polar_cpu_erf.py  mem_polar_cpu_etf.py  new_pot.py  notebook-2D.ipynb  notebook.ipynb  profile_50.nys-rep
2D/della_profiling/: fixed_center_of_mass_exact_lineprofile.py  fixed_center_of_mass_exact_lineprofile.py.lprof  log_profile  myprofile_64708708.nsys-rep  myprofile_64708708.sqlite  naive_tiny_grid.lprof  nsys.qs  profile.qs
lib/: constants.py  davidson.py  debug.py  hamiltonian.py  hamiltonian_cupy.py  linalg_helper.py  linalg_helper_cupy.py  linalg_helper_profiler.py  logger.py  maybejit.py  override.py  plotting.py  potentials.py  scraps.py  xp.py
tests/: __init__.py  test_backends.py  test_hel_j.py
tests/1D/: test_solvers.py
(+2 files in other folders)
