[project]
name = "exact-grid-quantum"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pyscf",
    "numpy",
    "jax",
    "matplotlib", # For running Jupyter notebooks
    "notebook",
    "tqdm>=4.67.1",
    "threadpoolctl>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["lib"]
