[project]
name = "exact-grid-quantum"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "numpy",
    "jax",
    "matplotlib", # For running Jupyter notebooks
    "notebook",
    "tqdm>=4.67.1",
    "threadpoolctl>=3.6.0",
    "line-profiler>=4.2.0",
    "nvidia-cupynumeric>=25.3.2",
    "torch>=2.7.1",
    "cupy-cuda12x>=13.4.1",
    "nvtx>=0.2.12",
]

[tool.setuptools.packages.find]
where = ["lib"]
